<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ListView
        android:id="@+id/searchList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/my_list_item"/>

</RelativeLayout>